...
    {
        //searchController.searchResultsUpdater = self as? UISearchResultsUpdating
        searchController.searchBar.delegate = self
        searchController.dimsBackgroundDuringPresentation = false
        searchController.definesPresentationContext = true
        searchController.hidesNavigationBarDuringPresentation = false
        searchController.searchBar.placeholder = "Enter City Name";
    }
    
    /* customization / init fetch result & search controller */
    func doCustomization()
    {
        initializeFetchedResultsController()
...
