...
                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                        <nil key="textColor"/>
                        <nil key="highlightedColor"/>
                    </label>
                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z3A-We-BII">
                        <rect key="frame" x="290" y="87.5" width="30" height="34"/>
                        <accessibility key="accessibilityConfiguration" identifier="button_delete"/>
                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
                        <state key="normal" title="X">
                            <color key="titleColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                        </state>
                        <connections>
                            <action selector="deleteButtonTap:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="faa-b1-ObW"/>
...
